--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	</head>
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
-			<div id="oburudvane" w3-include-html="http://pernati.github.io/oburudvane.html"></div>
+			<div id="oburudvane" w3-include-html="https://pernati.github.io/oburudvane.html"></div>
 		2. <a href="#givotni">Животни</a><br>
-			<div id="givotni" w3-include-html="http://pernati.github.io/givotni.html"></div>
+			<div id="givotni" w3-include-html="https://pernati.github.io/givotni.html"></div>
 
 		<script>
 		w3IncludeHTML();
 		</script>
 
-		<link rel="stylesheet" href="http://alex-tsvetanov.github.io/dark.css">
+		<link rel="stylesheet" href="https://Alex-Tsvetanov.github.io/dark.css">
 
 		За контакт:
 		<br />
@@ -27,7 +27,7 @@
 		<li><a href="tel:+359 88 857 3047">Мобилен телефон</a></li>
 		</ul>
 
-			<img src="http://alex-tsvetanov.github.io/powered.png" style="position:fixed;max-width:15%;max-height:30%;right:5%;bottom:5%">
+			<img src="https://Alex-Tsvetanov.github.io/powered.png" style="position:fixed;max-width:15%;max-height:30%;right:5%;bottom:5%">
 
 			<h2 id="os">You are using GNU/Linux</h2>
 			<script>
