--- a/kletki.html
+++ b/kletki.html
@@ -107,7 +107,7 @@
 		function getPhoto()
 		{
 			var asd = '<img id=\"shown img\" onclick=\"next ();\" src="/Kletki/';
-			asd += arr[x] + '.jpg';
+			asd += arr[x];
 			asd += '"></img>';
 			return asd;
 		}
