--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title></title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<script src="https://www.w3schools.com/lib/w3data.js"></script>
+		<script src="/w3data.js"></script>
 	</head>
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
-			<div id="oburudvane" w3-include-html="https://pernati.github.io/oburudvane.html"></div>
+			<div id="oburudvane" w3-include-html="/oburudvane.html"></div>
 		2. <a href="#givotni">Животни</a><br>
-			<div id="givotni" w3-include-html="https://pernati.github.io/givotni.html"></div>
+			<div id="givotni" w3-include-html="/givotni.html"></div>
 
 		<script>
 		w3IncludeHTML();
