--- a/oburudvane.html
+++ b/oburudvane.html
@@ -1,9 +1,20 @@
 <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/Alex-Tsvetanov/Catalan-Numbers-Project-for-MITE-2016/master/imgblog/alex_tsvetanov.jpg">
-		<meta http-equiv="content-type" content="text/html; charset=windows-1251">
-		<meta charset="windows-1251">
+<meta http-equiv="content-type" content="text/html; charset=windows-1251">
+<meta charset="windows-1251">
+<script src="/w3data.js"></script>
+
 <ul>
 <li><a href="#hranilki">Хранилки</a> <br> </li>
 <li><a href="#vodilki">Водилки</a> <br></li>
 <li><a href="#kletki">Клетки</a> <br></li>
 <li><a href="#incubatori">Инкубатори</a> <br></li>
 </ul>
+
+<div id="hranilki">
+</div>
+<div id="vodilki">
+</div>
+<div id="kletki" w3-include-html="/kletki.html">
+</div>
+<div id="incubatori">
+</div>
