--- a/oburudvane.html
+++ b/oburudvane.html
@@ -6,15 +6,13 @@
 <ul>
 <li><a href="#hranilki">Хранилки</a> <br> </li>
 <li><a href="#vodilki">Водилки</a> <br></li>
-<li><a href="#kletki">Клетки</a> <br></li>
+<li><a href="/kletki.html">Клетки</a> <br></li>
 <li><a href="#incubatori">Инкубатори</a> <br></li>
 </ul>
 
 <div id="hranilki">
 </div>
 <div id="vodilki">
-</div>
-<div id="kletki" w3-include-html="/kletki.html">
 </div>
 <div id="incubatori">
 </div>
