--- a/index.html
+++ b/index.html
@@ -18,36 +18,9 @@
 		<script>
 		w3IncludeHTML();
 		</script>
+		
+		<div id="contact_me" w3-include-html="/contact_me.html"></div>
 
-		<link rel="stylesheet" href="https://Alex-Tsvetanov.github.io/dark.css">
-
-		За контакт:
-		<br />
-		<ul>
-		<li><a href="tel:+359 88 857 3047">Мобилен телефон</a></li>
-		</ul>
-
-			<img src="https://Alex-Tsvetanov.github.io/powered.png" style="position:fixed;max-width:15%;max-height:30%;right:5%;bottom:5%">
-
-			<h2 id="os">You are using GNU/Linux</h2>
-			<script>
-				(function(){
-					var element = document.getElementById('os');
-					var platform = navigator.platform;
-
-					if(platform.indexOf('Linux') === 0)
-						platform = 'GNU/Linux';
-					else if(platform.indexOf('Win') === 0)
-						platform = 'Windows. And you are ...';
-					else if(platform.indexOf('Symbian') === 0)
-						platform = 'Symbian';
-					else if(platform.indexOf('i') === 0)
-						platform = 'iFail';
-
-					element.innerHTML = 'You are using ' + platform;
-				})();
-			</script>
-		</link>
 		</link>
 	</body>
 </html>
