--- a/kletki.html
+++ b/kletki.html
@@ -62,7 +62,7 @@
 				var new_height = 400.0;
 				var new_width = new_height * width / height;
 				img.style = "width: " + new_width + "px; height: " + new_height + "px;";
-				document.getElementById ('text').innerHTML = "<p> " + x + " -> " + arr [x] + "</p>";
+				document.getElementById ('text').innerHTML = "<p> " + x + "</p>";
 			}
 			function next()
 			{
