--- a/kletki.html
+++ b/kletki.html
@@ -11,8 +11,7 @@
 	<body>
 		<div id="like">
 		</div>
-		<input type="text" id="Number" name="Number"><br>
-		<button onclick="submit();">Submit</button>
+		<input type="text" id="Number" name="Number" onchange="submit();"><br>
 		<button onclick="add();">Add to favorites</button>
 		<button onclick="get();">Get favorites</button>
 		<div id='text'></div>
