--- a/kletki.html
+++ b/kletki.html
@@ -7,6 +7,7 @@
 			
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 			<link rel="stylesheet" href="https://Alex-Tsvetanov.github.io/dark.css">
+			<script src="/w3data.js"></script>
 	</head>
 	<body>
 		<div id="like">
