--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title></title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<script src="/w3data.js"></script>
+			<script src="https://pernati.github.io/w3data.js"></script>
 	</head>
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
