--- a/oburudvane.html
+++ b/oburudvane.html
@@ -1,7 +1,8 @@
 <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/Alex-Tsvetanov/Catalan-Numbers-Project-for-MITE-2016/master/imgblog/alex_tsvetanov.jpg">
 <meta http-equiv="content-type" content="text/html; charset=windows-1251">
 <meta charset="windows-1251">
-<script src="/w3data.js"></script>
+			<script src="https://pernati.github.io/w3data.js"></script>
+
 
 <ul>
 <li><a href="#hranilki">Хранилки</a> <br> </li>
