--- a/kletki.html
+++ b/kletki.html
@@ -121,5 +121,8 @@
 		<br>
 		<br>
 		<div id="contact_me" w3-include-html="/contact_me.html"></div>
+		<script>
+		w3IncludeHTML();
+		</script>
 	</body>
 </html>
