--- a/oburudvane.html
+++ b/oburudvane.html
@@ -7,7 +7,7 @@
 <ul>
 <li><a href="#hranilki">Хранилки</a> <br> </li>
 <li><a href="#vodilki">Водилки</a> <br></li>
-<li><a href="/kletki.html">Клетки</a> <br></li>
+<li><a href="https://pernati.github.io/kletki.html">Клетки</a> <br></li>
 <li><a href="#incubatori">Инкубатори</a> <br></li>
 </ul>
 
