--- a/givotni.html
+++ b/givotni.html
@@ -1,8 +1,18 @@
 <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/Alex-Tsvetanov/Catalan-Numbers-Project-for-MITE-2016/master/imgblog/alex_tsvetanov.jpg">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta charset="utf-8">
-<ul>
-<li><a href="#kokoshki">Кокошки</a> <br></li>
-<li><a href="#pudpuduci">Пъдпъдъци</a> <br></li>
-<li><a href="#patici">Патици</a> <br></li>
-<ul>
+<table>
+	<tr>
+		<td><a href="#kokoshki">Кокошки</a></td> <td><a href="#pudpuduci">Пъдпъдъци</a></td> <td><a href="#patici">Патици</a></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="https://pernati.github.io/Givotni/Kokoshki/022107324.jpg">
+			<img src="https://pernati.github.io/Givotni/Kokoshki/PB250323.JPG" >
+			<img src="https://pernati.github.io/Givotni/Kokoshki/ukokkei2M.jpg">
+			<img src="https://pernati.github.io/Givotni/Kokoshki/YelBarredBootedBtyPr.JPEG">
+		</td>
+			<td></td>
+			<td></td>
+	</tr>
+</table>
