--- a/index.html
+++ b/index.html
@@ -12,9 +12,26 @@
 	</head>
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
-			<div id="oburudvane" w3-include-html="/oburudvane.html"></div>
+		<div id="oburudvane">
+		</div>
 		2. <a href="#givotni">Животни</a><br>
-			<div id="givotni" w3-include-html="/givotni.html"></div>
+			<div id="givotni">
+								<table>
+									<tr>
+										<td><a href="#kokoshki">Кокошки</a></td> <td><a href="#pudpuduci">Пъдпъдъци</a></td> <td><a href="#patici">Патици</a></td>
+									</tr>
+									<tr>
+										<td>
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/022107324.jpg">
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/PB250323.JPG" >
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/ukokkei2M.jpg">
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/YelBarredBootedBtyPr.JPEG">
+										</td>
+											<td></td>
+											<td></td>
+									</tr>
+								</table>
+			</div>
 
 		<script>
 		w3IncludeHTML();
