--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 			<script src="https://pernati.github.io/w3data.js"></script>
-			<script src="https://pernati.github.io/w3data.js"></script>
 	</head>
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
@@ -22,10 +21,10 @@
 									</tr>
 									<tr>
 										<td>
-											<img src="https://pernati.github.io/Gvotni/Kokoshki/022107324.jpg">
-											<img src="https://pernati.github.io/Gvotni/Kokoshki/PB250323.JPG" >
-											<img src="https://pernati.github.io/Gvotni/Kokoshki/ukokkei2M.jpg">
-											<img src="https://pernati.github.io/Gvotni/Kokoshki/YelBarredBootedBtyPr.JPEG">
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/022107324.jpg"><br>
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/PB250323.JPG" ><br>
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/ukokkei2M.jpg"><br>
+											<img src="https://pernati.github.io/Gvotni/Kokoshki/YelBarredBootedBtyPr.JPEG"><br>
 										</td>
 											<td></td>
 											<td></td>
@@ -37,7 +36,7 @@
 		w3IncludeHTML();
 		</script>
 		
-		<div id="contact_me" w3-include-html="/contact_me.html"></div>
+		<div id="contact_me" w3-include-html="https://pernati.github.io/contact_me.html"></div>
 
 		</link>
 	</body>
