--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 		</script>
 		
 		<div id="contact_me" w3-include-html="https://pernati.github.io/contact_me.html"></div>
+		<script>
+		w3IncludeHTML();
+		</script>
 
 		</link>
 	</body>
