--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 									</tr>
 									<tr>
 										<td>
-											<img src="https://pernati.github.io/Givotni/Kokoshki/022107324.jpg"/><br>
-											<img src="https://pernati.github.io/Givotni/Kokoshki/PB250323.JPG" /><br>
-											<img src="https://pernati.github.io/Givotni/Kokoshki/ukokkei2M.jpg"/><br>
-											<img src="https://pernati.github.io/Givotni/Kokoshki/YelBarredBootedBtyPr.JPEG"/><br>
+											<img style="width: 30%; height: 30%;" id="1" src="https://pernati.github.io/Givotni/Kokoshki/022107324.jpg"/><br>
+											<img style="width: 30%; height: 30%;" id="2" src="https://pernati.github.io/Givotni/Kokoshki/PB250323.JPG" /><br>
+											<img style="width: 30%; height: 30%;" id="3" src="https://pernati.github.io/Givotni/Kokoshki/ukokkei2M.jpg"/><br>
+											<img style="width: 30%; height: 30%;" id="4" src="https://pernati.github.io/Givotni/Kokoshki/YelBarredBootedBtyPr.JPEG"/><br>
 										</td>
 											<td></td>
 											<td></td>
