--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 	<body>
 		1. <a href="#oburudvane">Обурудване</a><br>
 		<div id="oburudvane">
+<ul>
+<li><a href="#hranilki">Хранилки</a> <br> </li>
+<li><a href="#vodilki">Водилки</a> <br></li>
+<li><a href="https://pernati.github.io/kletki.html">Клетки</a> <br></li>
+<li><a href="#incubatori">Инкубатори</a> <br></li>
+</ul>
+
+<div id="hranilki">
+</div>
+<div id="vodilki">
+</div>
+<div id="incubatori">
+</div>
 		</div>
 		2. <a href="#givotni">Животни</a><br>
 			<div id="givotni">
